--- a/checkout.html
+++ b/checkout.html
@@ -155,7 +155,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="Muse Coffee.jpg" alt="Logo">
+      <img src="Muse coffee.jpg" alt="Logo">
     </div>
     <div class="footer-links">
       <div class="footer-column">
