--- a/coffee.html
+++ b/coffee.html
@@ -218,7 +218,7 @@
 <body>
 
 <div class="navbar">
- <img src="Muse Coffee.jpg" alt="Cafe Logo">
+ <img src="Muse coffee.jpg" alt="Cafe Logo">
  <nav>
    <ul>
   <li><a href="index.html">Home</a></li>
@@ -539,7 +539,7 @@ span.onclick = function() {
 <footer>
   <div class="footer">
     <div class="footer-logo">
-      <img src="Muse Coffee.jpg" alt="Logo">
+      <img src="Muse coffee.jpg" alt="Logo">
     </div>
     <div class="footer-links">
       <div class="footer-column">
