--- a/feedback.html
+++ b/feedback.html
@@ -190,7 +190,7 @@
 
  
   <div class="navbar">
-    <img src="Muse Coffee.jpg" alt="Cafe Logo">
+    <img src="Muse coffee.jpg" alt="Cafe Logo">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -339,7 +339,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="Muse Coffee.jpg" alt="Logo">
+      <img src="Muse coffee.jpg" alt="Logo">
     </div>
     <div class="footer-links">
       <div class="footer-column">
