--- a/hot-meals.html
+++ b/hot-meals.html
@@ -217,7 +217,7 @@
 
 
  <div class="navbar">
- <img src="Muse Coffee.jpg" alt="Cafe Logo">
+ <img src="Muse coffee.jpg" alt="Cafe Logo">
  <nav>
     <ul>
   <li><a href="index.html">Home</a></li>
@@ -547,7 +547,7 @@ span.onclick = function() {
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="Muse Coffee.jpg" alt="Logo">
+      <img src="Muse coffee.jpg" alt="Logo">
     </div>
     <div class="footer-links">
       <div class="footer-column">
