--- a/location.html
+++ b/location.html
@@ -145,7 +145,7 @@
 <body>
 
   <div class="navbar">
-    <img src="Muse Coffee.jpg" alt="Cafe Logo">
+    <img src="Muse coffee.jpg" alt="Cafe Logo">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
