--- a/our story.html
+++ b/our story.html
@@ -153,7 +153,7 @@
 <body>
 
 <div class="navbar">
- <img src="Muse Coffee.jpg" alt="Cafe Logo">
+ <img src="Muse coffee.jpg" alt="Cafe Logo">
 <nav>
      <ul>
   <li><a href="index.html">Home</a></li>
