--- a/pastries.html
+++ b/pastries.html
@@ -223,7 +223,7 @@
 
 
  <div class="navbar">
- <img src="Muse Coffee.jpg" alt="Cafe Logo">
+ <img src="Muse coffee.jpg" alt="Cafe Logo">
  <nav>
    <ul>
   <li><a href="index.html">Home</a></li>
@@ -531,7 +531,7 @@ span.onclick = function() {
 <footer>
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="Muse Coffee.jpg" alt="Logo">
+      <img src="Muse coffee.jpg" alt="Logo">
     </div>
     <div class="footer-links">
       <div class="footer-column">
