--- a/about.html
+++ b/about.html
@@ -347,6 +347,28 @@
     .team-card .social {
       margin-top: 10px;
     }
+.group-link {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.view-profile {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #f7c6d9;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 8px;
+  transition: background 0.3s ease;
+}
+
+.view-profile:hover {
+  background-color: #f2a3b3;
+  color: black;
+
+}
+	  
 
 
 
@@ -696,9 +718,13 @@ function showSlides(n) {
       <h4>NurHafizah Hanin</h4>
       <p>Strategic Planner</p>
       <div class="social">
-      
-      </div>
+</div>
     </div>
+      
+     <div class="group-link">
+    <a href="group.html" class="view-profile">View Full Group Profile</a>
+  </div>
+	  
   </div>
 </section>
 
